--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-template",
   "version": "1.0.0",
-  "description": "react template using webpack",
+  "description": "",
   "main": "index.js",
   "scripts": {
+    "uninitialize": "rm -rf .git",
     "start": "cross-env NODE_ENV=development webpack serve --mode=development",
     "dev": "cross-env NODE_ENV=development webpack --mode=development",
     "build": "cross-env NODE_ENV=production webpack --mode=production"
