--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "uninitialize": "rm -rf .git",
     "start": "cross-env NODE_ENV=development webpack serve --mode=development",
-    "dev": "cross-env NODE_ENV=development webpack --mode=development",
     "build": "cross-env NODE_ENV=production webpack --mode=production"
   },
   "keywords": [],
@@ -38,6 +37,7 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.7",
     "sass-loader": "^10.1.0",
     "typescript": "^4.0.5",
     "webpack": "^5.4.0",
